get user added
